--- a/style.css
+++ b/style.css
@@ -4,27 +4,31 @@
 --col-neut-dark-blue: hsl(249, 10%, 26%);
 --col-neut-gray-blue: hsl(246, 25%, 77%);
 --col-accent-blue: hsl(248, 32%, 49%);
+
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
+
 
 body {
     font-family: 'Poppins', sans-serif;
     font-size: 1rem;
+    display: grid;
+    place-content: center;
+    min-height: 100lvh;
+
+}
+
+section {
     background-image: url(./images/bg-intro-mobile.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-color: var(--col-prim-red);
-    min-height: 100dvh;
-    display: grid;
-    place-content: center;
-}
-
-section {
     display: grid;
     max-width: 90vw;
     margin: auto;
@@ -32,11 +36,13 @@ section {
     color: hsl(0, 10%, 100%);
     padding-top: 3vh;
     row-gap: 1rem;
+    min-height: 100dvh;
+    padding: 0 1rem 2rem;
 }
 
 h1 {
     font-size: 1.5rem;
-    padding: 0 15vw;
+    padding: 1.5rem 10vw 1.5rem;
 }
 
 hgroup {
@@ -53,6 +59,8 @@ hgroup {
     -o-border-radius: .6rem;
     max-height: min-content;
     font-weight: 400;
+    height: min-content;
+    box-shadow: 0rem .5rem .1rem hsla(249, 10%, 26%, 25%);
 }
 
 .form-container {
@@ -60,6 +68,7 @@ hgroup {
     border-radius: .8rem;
     color: var(--col-neut-gray-blue);
     padding: 1.4rem;
+    box-shadow: 0rem .5rem .1rem hsla(249, 10%, 26%, 25%);
 }
 
 ul {
@@ -75,17 +84,20 @@ ul li {
 }
 
 input, #submit {
-    padding: 1rem;
+    padding: .9rem;
     width: 100%;
     border-radius: .3rem;
 }
 
 input {
     border: 1px solid var(--col-neut-gray-blue);
+}
+
+input::placeholder {
     font-weight: 700;
 }
 
-input:invalid {
+.invalid {
     border: 2px solid var(--col-prim-red);
 }
 
@@ -130,19 +142,22 @@ img.error {
 
 @media screen and (min-width: 38rem) {
 
-    body {
-        background-image: url(./images/bg-intro-desktop.png);
-    }
+
     section {
+        background-image: url(./images/bg-intro-desktop.png);
         grid-template-columns: 1fr 1fr;
         grid-template-rows: .1fr 1fr;
         text-align: left;
         column-gap: 5vw;
+        max-width: 90rem;
+        max-height: 50rem;
+        min-height: auto;
+        padding: clamp(2rem, 11vw, 10rem);
     }
 
     h1 {
         padding: 1.5rem 0;
-        font-size: clamp(1.5rem, 4vw, 2.5rem);
+        font-size: clamp(1.5rem, 4vw, 3rem);
     }
 
     hgroup {
@@ -153,7 +168,11 @@ img.error {
     }
 
     .try-it {
-        padding: 1rem 3rem;
+        padding: 1rem clamp(1rem, 3vw, 3rem);
+    }
+
+    .terms {
+        text-align: center;
     }
 }
 
